--- a/package.json
+++ b/package.json
@@ -2,30 +2,30 @@
   "name": "mars-rover-starter-ts",
   "version": "1.0.0",
   "description": "A mars rover project in Node.js",
+  "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "build": "npx tsc",
-    "start": "ts-node main.ts",
-    "test": "mocha --recursive --exit --require ts-node/register --reporter dot 'tests/**/*.test.ts'"
+    "start": "tsx main.ts",
+    "test": "mocha --recursive --exit"
   },
   "author": "Antoine Boileau <apem.boileau@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^18.15.10",
-    "@types/yargs": "^17.0.24",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
-    "yargs": "^17.7.1"
+    "@types/yargs": "^17.0.32",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/mocha": "^10.0.1",
-    "@types/sinon": "^10.0.13",
-    "@types/sinon-chai": "^3.2.9",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^10.2.0",
-    "sinon": "^15.0.3",
-    "sinon-chai": "^3.7.0"
+    "@types/chai": "^4.3.14",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.30",
+    "@types/sinon": "^17.0.3",
+    "chai": "^5.1.0",
+    "mocha": "^10.3.0",
+    "sinon": "^17.0.1",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.3"
   }
 }
